# yadoms

sources/plugins/WakeOnLan/: CMakeLists.txt  WakeOnLan.cpp  WakeOnLan.h  package.json
sources/plugins/WakeOnLan/locales/: en.json  fr.json
